見た目の調整

--- a/app/views/parerr.scala.html
+++ b/app/views/parerr.scala.html
@@ -23,5 +23,4 @@
 	</ul>
 
 </div>
-<div class="copyright">Copyright (C) <A HREF="http://get.daa.jp/">GetNet.</A> All Rights Reserved.</div>
-<!-- Copyright(C) 2005 GetNet all rights reserved. http://get.daa.jp/ --></BODY></HTML>
+</BODY></HTML>
