--- a/app/views/valuation_detailed.scala.html
+++ b/app/views/valuation_detailed.scala.html
@@ -4,7 +4,7 @@
 @template("査定詳細画面"){
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")">
 	}{
-<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/valuation.css")">
+<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/valuation_detail.css")">
 
 <table border ="1">
                    <tr><td><label for="name">対象者:</label></td><td><label for="name">@emp.name</label></td></tr>
