--- a/app/views/valuation.scala.html
+++ b/app/views/valuation.scala.html
@@ -24,7 +24,7 @@
 	}{
 
 	<h2>査定</h2>
-	<table class="valuation_table" border="1">
+	<table class="valuation_table">
 	<tr><td>@sateiT(emp)(par)(pos)</td></tr>
 		</table>
 }
