--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -13,7 +13,7 @@ body{	font-family: Verdana;
 
 	color: #444;
 	letter-spacing: 1px;
-	background-color: #d7e2ef;
+	background-color: #8eb4d9;
 	margin: 0px;
 	overflow: auto;
 }
@@ -22,39 +22,42 @@ A {color : #D56300; text-decoration : underline; }
 	background-color: #fff;
 	border-top: solid 1px #666;
 	border-bottom: solid 1px #666;
-	padding: 10px 30px 60px 30px;
-	margin-top: 50px;
+
+	margin-top: 20px;
 	text-align: center;
 }
 h1{
-	font-size: 80px;
+	font-size:50px;
 
 
 	letter-spacing: 3px;
 	border-bottom: dashed 1px #666;
 	margin:  10px 0px 50px 0px;
-	padding: 2px 30px 2px 10px;
+
 }
 h2{
-	font-size: 50px;
+height:25%;
+		border-bottom: dashed 1px #666;
+	font-size: 30px;
 	font-family: Verdana;
 	font-weight: normal;
 	letter-spacing: 2px;
-	margin:  40px 0px 20px 0px;
-	padding: 2px 10px 2px 0px;}
 
-	.red{color:#0080ff;	font-family: Verdana;font-weight: bold;}
+	}
+
+	.red{color:#ff8080;;	font-family: Verdana;font-weight: bold;}
 h3{
-	font-size: 30px;
+	font-size: 20px;
 	font-family: Verdana;
 	font-weight: normal;
 	letter-spacing: 3px;
 	border-bottom: dashed 1px #666;
-	margin:  10px 0px 50px 0px;
-	padding: 2px 30px 2px 10px;
+bottom:10px;
+
 }
 h4{
-	font-size: 30px;
+	height:5%;
+	font-size: 25px;
 	font-family: Verdana;
 	font-weight: bold;
 
@@ -66,12 +69,11 @@ h4{
 	font-family: Arial;
 	font-weight: normal;
 	text-align: right;
-	margin:  5px 0px 10px 0px;
-	padding: 0px 0px 0px 0px;
+
 }
 ul{list-style:none;
-	font-size: 30px;
+	font-size: 20px;
 	font-weight: bold;
-	letter-spacing: 3px;
+	letter-spacing: 2px;
 
 }
