--- a/app/views/authentication/index.scala.html
+++ b/app/views/authentication/index.scala.html
@@ -23,13 +23,13 @@
    		}
    		<div id = "login_foam">
         @form(routes.AuthController.authenticate()) {
-        <a  id="tab"><div id="name" tabindex="1">@inputText(loginForm("username"))</div></a>
-        <a  id="tab"><div id="name" tabindex="2">@inputPassword(loginForm("password"))</div></a>
+        <a  id="tab"><div id="name" tabindex="1">@inputText(loginForm("Username"))</div></a>
+        <a  id="tab"><div id="name" tabindex="2">@inputPassword(loginForm("Password"))</div></a>
 		</div>
         <input type="submit"value="Login" class = "submit-button"><br><br>
 
         }
         </div>
- <input type="button" onclick="location.href='adlogin'"value="管理者"style="WIDTH: 100px; HEIGHT: 40px; cursor:pointer;">
+<!--  <input type="button" onclick="location.href='adlogin'"value="管理者"style="WIDTH: 100px; HEIGHT: 40px; cursor:pointer;">-->
     </body>
 </html>
