--- a/app/views/valuation_detailed.scala.html
+++ b/app/views/valuation_detailed.scala.html
@@ -5,13 +5,15 @@
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")">
 	}{
 <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/valuation_detail.css")">
-
+<table class="title" ><tr><td>
 <table border ="1">
                    <tr><td><label for="name">対象者:</label></td><td><label for="name">@emp.name</label></td></tr>
                    <tr><td><label for="name">社員ＩＤ：</label></td><td><label for="name">@emp.employees_cd</label></td></tr>
-</table>
-					<h1>査定詳細</h1><br>
-					<div class="count">受信件数: @gc.size 件</div>
+
+
+</table></td>
+					<td><div class="moji">査定詳細</div></td></tr></table>
+<div class="count">受信件数: @gc.size 件</div>
 
 	<form name="selectForm" action="@routes.HomeController.valuation_detailedPost()" method="POST">
 	<input type="hidden" name="user_id" value="@emp.employees_id" />
