--- a/app/views/template/onSideMenu.scala.html
+++ b/app/views/template/onSideMenu.scala.html
@@ -2,6 +2,7 @@
 @(title: String)(par: String)(headH: Html)(content: Html)
 @import views.html.template._
 
+
 <!-- 引数 タイトル,権限,ヘッダ追記内容,内容 -->
 @template(title){
 		@headH
@@ -20,9 +21,9 @@
 	<tr><td><input type="button" value="受信箱"       style="background-image: url('@routes.Assets.versioned("images/receive.png")');   background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.MailController.receive'" class="receive"><br></td></tr>
 	<tr><td><input type="button" value="送信箱"       style="background-image: url('@routes.Assets.versioned("images/trans.png")');     background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.MailController.trans'"class="trans"><br></td></tr>
 
-	<tr><td><input type="button" value="事例の選択"   style="background-image: url('@routes.Assets.versioned("images/sentaku.png")');   background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.HomeController.typical()'"class="sentaku"><br></td></tr>
-	<tr><td><input type="button" value="査定"         style="background-image: url('@routes.Assets.versioned("images/satei.png")');     background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.HomeController.valuation()'"class="valuation"><br></td></tr>
-	<tr><td><input type="button" value="ピックアップ" style="background-image: url('@routes.Assets.versioned("images/good.png")');      background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.PickController.pickup()'"class="good"><br></td></tr>
+	@if(Employees.find.byId(Integer.parseInt(session.get("empId"))).permissions =="人事"){<tr><td><input type="button" value="事例の選択"   style="background-image: url('@routes.Assets.versioned("images/sentaku.png")');   background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.HomeController.typical()'"class="sentaku"><br></td></tr>}
+	@if(Employees.find.byId(Integer.parseInt(session.get("empId"))).permissions =="人事"){<tr><td><input type="button" value="査定"         style="background-image: url('@routes.Assets.versioned("images/satei.png")');     background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.HomeController.valuation()'"class="valuation"><br></td></tr>}
+	@if(Employees.find.byId(Integer.parseInt(session.get("empId"))).permissions =="人事" || Employees.find.byId(Integer.parseInt(session.get("empId"))).permissions =="経営陣" ){<tr><td><input type="button" value="ピックアップ" style="background-image: url('@routes.Assets.versioned("images/good.png")');      background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.PickController.pickup()'"class="good"><br></td></tr>}
 
 	<tr><td><input type="button" value="ログアウト"   style="background-image: url('@routes.Assets.versioned("images/logout.png")');    background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.AuthController.logout'"class="logout"><br></td></tr>
 
