--- a/app/views/mail/receive.scala.html
+++ b/app/views/mail/receive.scala.html
@@ -1,6 +1,6 @@
 @(gc : List[Gratitude_Card])(par : String)(pos : Map[String,Array[String]])
 @import views.html.template._
-@onSideMenu("テスト")(""){
+@onSideMenu("受信箱")(""){
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")" id="receive">
 <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideReceive.css")">
 <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/card_width.css")">
