--- a/app/views/mail/trans.scala.html
+++ b/app/views/mail/trans.scala.html
@@ -1,6 +1,6 @@
 @(gc : List[Gratitude_Card])(par : String)(pos : Map[String,Array[String]])
 @import views.html.template._
-@onSideMenu("テスト")(""){
+@onSideMenu("送信箱")(""){
 <link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")" id="tr">
 <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideTrans.css")">
 <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/card_width.css")">
